--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "tauri": "tauri"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": "react-app"
