--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,8 +18,11 @@ tauri-build = { version = "1.0.0-beta.0" }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.0-beta.1", features = ["api-all"] }
-winreg = "0.8"
 anyhow = "1.0"
+tokio = { version = "1.0", features = ["full"] }
+
+[target.'cfg(windows)'.dependencies]
+winreg = "0.8"
 
 [features]
 default = [ "custom-protocol" ]
