--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "app"
+name = "rabbit-ui"
 version = "0.1.0"
 description = "A Tauri App"
-authors = ["you"]
+authors = ["spacemeowx2"]
 license = ""
 repository = ""
-default-run = "app"
+default-run = "rabbit-ui"
 edition = "2018"
 build = "src/build.rs"
 
@@ -15,11 +15,15 @@ build = "src/build.rs"
 tauri-build = { version = "1.0.0-beta.0" }
 
 [dependencies]
+log = "0.4"
+env_logger = "0.8.2"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.0-beta.1", features = ["api-all"] }
 anyhow = "1.0"
 tokio = { version = "1.0", features = ["full"] }
+rabbit-digger-pro = { version = "0.1", path = "../rabbit-digger-pro/"}
+uuid = { version = "0.8", features = ["v4"] }
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.8"
