--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "swr": "^0.5.6",
     "typescript": "^3.9.5",
     "web-vitals": "^0.2.2"
   },
