--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,8 +15,8 @@ build = "src/build.rs"
 tauri-build = { version = "1.0.0-beta.0" }
 
 [dependencies]
-log = "0.4"
-env_logger = "0.8.2"
+tracing = "0.1.26"
+tracing-subscriber = "0.2.18"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.0-beta.1", features = ["api-all"] }
