--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,7 +22,7 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.0-beta.1", features = ["api-all"] }
 anyhow = "1.0"
 tokio = { version = "1.0", features = ["full"] }
-rabbit-digger-pro = { version = "0.1", path = "../rabbit-digger-pro/"}
+rabbit-digger-pro = { version = "0.1", path = "../rabbit-digger-pro/", features = ["raw"] }
 uuid = { version = "0.8", features = ["v4"] }
 
 [target.'cfg(windows)'.dependencies]
