--- a/package.json
+++ b/package.json
@@ -17,17 +17,22 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router": "^5.1.14",
     "@types/react-router-dom": "^5.1.7",
+    "@types/yaml": "^1.9.7",
     "framer-motion": "^4.0.0",
     "json-schema-to-typescript": "^10.1.4",
+    "monaco-yaml": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^3.0.0",
+    "react-monaco-editor": "^0.43.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "swr": "^0.5.6",
     "typescript": "^3.9.5",
-    "web-vitals": "^0.2.2"
+    "web-vitals": "^0.2.2",
+    "worker-loader": "^3.0.8",
+    "yaml": "^1.10.2"
   },
   "scripts": {
     "start": "react-scripts start",
