--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/yaml": "^1.9.7",
     "framer-motion": "^4.0.0",
     "json-schema-to-typescript": "^10.1.4",
+    "monaco-editor": "^0.25.2",
     "monaco-yaml": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
