--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "@testing-library/jest-dom": "^5.9.0",
     "@testing-library/react": "^10.2.1",
     "@testing-library/user-event": "^12.0.2",
+    "@types/javascript-time-ago": "^2.0.2",
     "@types/jest": "^25.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router": "^5.1.14",
     "@types/react-router-dom": "^5.1.7",
+    "@types/uuid": "^8.3.0",
     "@types/yaml": "^1.9.7",
     "framer-motion": "^4.0.0",
+    "javascript-time-ago": "^2.3.7",
     "json-schema-to-typescript": "^10.1.4",
     "monaco-editor": "^0.25.2",
     "monaco-yaml": "^2.5.1",
@@ -31,6 +34,7 @@
     "react-scripts": "4.0.3",
     "swr": "^0.5.6",
     "typescript": "^3.9.5",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.2",
     "worker-loader": "^3.0.8",
     "yaml": "^1.10.2"
