--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-use": "^17.3.1",
     "swr": "^0.5.6",
     "typescript": "^3.9.5",
     "uuid": "^8.3.2",
@@ -59,6 +60,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:8030"
+  }
 }
