--- a/.editorconfig
+++ b/.editorconfig
@@ -12,5 +12,7 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 
 [*.rs]
-indent_style = tab
+indent_size = 4
+
+[*.toml]
 indent_size = 4
