--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
-    "@tauri-apps/api": "^1.0.0-beta.1",
+    "@tauri-apps/api": "^1.0.0-rc.1",
     "@testing-library/jest-dom": "^5.9.0",
     "@testing-library/react": "^10.2.1",
     "@testing-library/user-event": "^12.0.2",
